# iarsma

./: .editorconfig  .env.example  .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: build-wasm.sh  verify-deployment.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
.superpowers/sdd/: task-11-report.md  task-6-report.md
UI-Design/: README.md  iarsma-ux-analysis.md
UI-Design/mockups/: iarsma-redesign.html  secondary-views.css  secondary-views.js
\.superpowers/sdd/: task-1-report.md
components/action-log/: Cargo.toml  README.md
components/action-log/src/: canonical.rs  lib.rs
components/action-log/wit/: action_log.wit
components/git-backend/: Cargo.toml  README.md
components/git-backend/src/: lib.rs
components/git-backend/wit/: git_backend.wit
components/html-sanitizer/: Cargo.toml  README.md
components/html-sanitizer/src/: lib.rs  sanitize.rs
components/html-sanitizer/wit/: html_sanitizer.wit
components/jmap-client/: Cargo.toml  README.md
components/jmap-client/src/: lib.rs  parse.rs  parse_email.rs  parse_mailbox.rs  parse_thread_get.rs
components/jmap-client/tests/fixtures/: email_query.json  mailbox_get.json  session.json  thread_get.json
components/jmap-client/wit/: jmap_client.wit
components/markdown/: Cargo.toml  README.md
components/markdown/src/: lib.rs
components/markdown/wit/: markdown.wit
components/memory-backend/: Cargo.toml  README.md
components/memory-backend/src/: canonical.rs  lib.rs
components/memory-backend/wit/: memory_backend.wit
deployment/iarsma-web-app/: config.json.example
deployment/mcp/: .env.example  README.md  docker-compose.yml
deployment/openbrain/: .env.example  README.md  docker-compose.yml
deployment/openbrain/init/: 01-schema-1536.sql.example  01-schema.sql
docs/: a11y.md  agent-collaboration.md  agent-quickstart.md  architecture.md  capability-scopes.md  compose-ui.md  decisions.md  deployment.md  discovery.md  folders.md  going-public.md  implementation-plan.md  keyboard.md  labels.md  project-brief.md  schema-migration.md  stalwart-setup.md  versioning.md
docs/decisions/: openinference-mapping.md
docs/superpowers/plans/: 2026-05-23-phase3a-v050.md  2026-05-24-phase3b-v060.md  2026-05-24-phase3c-v070.md  2026-06-23-folder-management.md  2026-06-23-labels.md  2026-06-24-bulk-actions.md  2026-06-24-calendar-create-manage.md
docs/superpowers/specs/: 2026-05-23-phase3-design.md  2026-05-24-phase4-design.md  2026-06-23-folder-management-design.md  2026-06-23-labels-design.md  2026-06-24-bulk-actions-design.md  2026-06-24-calendar-create-manage-design.md
mcp-server/: Dockerfile  README.md  package.json  tsconfig.json
mcp-server/src/: agent-context.ts  approval-bridge.ts  auth.ts  github-config.ts  github-read.ts  http-transport.ts  index.ts  invocation.ts  scope-filter.ts  server.ts  stalwart-introspection-token-store.ts  stalwart-permissions.ts  stalwart-session-token-store.ts  token-store.ts  tool-loader.ts  tool-scopes.ts
mcp-server/src/__tests__/: agent-context.test.ts  auth.test.ts  files-list.test.ts  files-propose-write.test.ts  files-read.test.ts  http-transport.test.ts  invocation.test.ts  mail-delete.test.ts  mail-draft.test.ts  mail-modify.test.ts  mail-send.test.ts  mailbox-list.test.ts  scope-filter.test.ts  server-envelope.test.ts  session-get.test.ts  stalwart-introspection-token-store.test.ts  stalwart-permissions.test.ts  stalwart-session-token-store.test.ts  thread-get.test.ts  thread-list.test.ts  thread-search.test.ts  token-store.test.ts  tool-loader.test.ts  tool-scopes.test.ts
mcp-server/src/handlers/: _resolve-bearer.ts  files-list.ts  files-propose-write.ts  files-read.ts  mail-delete.ts  mail-draft.ts  mail-modify.ts  mail-send.ts  mailbox-list.ts  session-get.ts  thread-get.ts  thread-list.ts  thread-search.ts
scripts/: verify-contact-name.mjs
shell/: .pa11yci.cjs  .pa11yci.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
shell/e2e/: oauth-login.spec.ts
shell/public/: sw.js
shell/src/: App.tsx  auth-state.ts  compose-state.ts  config.ts  index.css  keyboard-state.ts  label-delete-helpers.ts  mail-state.ts  main.tsx  nav-state.ts  sidebar-mailbox-entry.ts  test-setup.ts  vite-env.d.ts
shell/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: lib.rs  main.rs
shell/src/__tests__/: a11y-integration.test.tsx  a11y.test.tsx  auth-state.test.ts  config.test.ts  global-keyboard.test.tsx  sidebar-mailbox-mapping.test.ts
shell/src/components/: accent-picker.module.css  accent-picker.tsx  avatar.module.css  avatar.tsx  badge.module.css  badge.tsx  bottom-nav.module.css  bottom-nav.tsx  bulk-action-bar.module.css  bulk-action-bar.tsx  button.module.css  button.tsx  calendar-dialogs.tsx  card.module.css  card.tsx  color-palette.tsx  command-palette.module.css  command-palette.tsx  delete-toast.tsx  density-selector.module.css  density-selector.tsx  dialog.module.css  dialog.tsx  empty-state.module.css  empty-state.tsx  folder-dialogs.tsx  icons.tsx  index.ts  input.module.css  input.tsx  label-chip.module.css  label-chip.tsx  label-dialogs.tsx  mailbox-tree-view.tsx  menu-button.module.css  menu-button.tsx  notice.module.css  notice.tsx  preview-card.module.css  preview-card.tsx  (+11 more)
shell/src/hooks/: use-media-query.ts  use-router.ts
shell/src/runtime/: action-log-store.ts  action-log.ts  agent-metadata-store.ts  agent-token-issuer.ts  appearance.ts  approval-store.ts  atoms.ts  auth-storage.ts  cache-policy.ts  cache-storage.ts  cached-invoker.ts  calendar-delete-helpers.ts  calendar-transform.ts  calendar-visibility.ts  (+45 more)
token-exchange/: README.md  package.json
token-exchange/src/: config.ts  discovery.ts  exchange.ts  index.ts  server.ts
tools/codegen/: README.md  package.json  tsconfig.json
wasm-bindings/: package.json
website/: CNAME  README.md
(+214 files in other folders)
