[package]
name = "action-log"
version = "0.1.0"
description = "Tamper-evident hash-chained action log. SHA-384 (D-027). OpenInference-compatible entries."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# `rlib` so `cargo test` can link the crate on the host target; `cdylib`
# so `cargo component build` can produce the WASM component artifact.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen-rt.workspace = true


[package.metadata.component]
package = "iarsma:action-log"

[package.metadata.component.target]
path = "wit"
world = "action-log"
