[package]
name = "git-backend"
version = "0.0.0"
description = "Pluggable FileBackend trait. Tier-1 GitHub REST API. Tier-2 gitoxide-in-WASM lands later."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen-rt.workspace = true


[package.metadata.component]
package = "iarsma:git-backend"
