[package]
name = "html-sanitizer"
version = "0.0.0"
description = "HTML sanitizer using ammonia. Pure function: receives raw HTML, returns sanitized HTML. No network, no filesystem."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true
ammonia = "4.0"

[package.metadata.component]
package = "iarsma:html-sanitizer"
