[package]
name = "html-sanitizer"
version = "0.1.0"
description = "HTML sanitizer using ammonia. Pure function: receives raw HTML, returns sanitized HTML. No network, no filesystem."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# `rlib` so `cargo test` can link the crate on the host target; `cdylib`
# so `cargo component build` can produce the WASM component artifact.
# Mirrors action-log + jmap-client.
crate-type = ["cdylib", "rlib"]

[dependencies]
ammonia = "4.0"
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "iarsma:html-sanitizer"

[package.metadata.component.target]
path = "wit"
world = "html-sanitizer"
