[package]
name = "jmap-client"
version = "0.0.0"
description = "Thin JMAP client wrapper. Wraps stalwartlabs/jmap-client (D-025). Reused by shell + MCP server."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true


[package.metadata.component]
package = "iarsma:jmap-client"
