[package]
name = "jmap-client"
version = "0.3.0"
description = "Thin JMAP client wrapper. Wraps stalwartlabs/jmap-client (D-025). Reused by shell + MCP server."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
# `rlib` so `cargo test` can link the crate on the host target; `cdylib` so
# `cargo component build` can produce the WASM component artifact.
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen-rt.workspace = true


[package.metadata.component]
package = "iarsma:jmap-client"

[package.metadata.component.target]
path = "wit"
world = "jmap-client"
