[package]
name = "memory-backend"
version = "0.0.0"
description = "Pluggable MemoryBackend trait. Tier-1 default: SQLite-via-OPFS / Tauri filesystem. Tier-2 OB1 adapter lands in Phase 5+."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true


[package.metadata.component]
package = "iarsma:memory-backend"
